--- a/estilos.css
+++ b/estilos.css
@@ -111,10 +111,21 @@ input, select {
     background: red;
     width: 100%;
     height: 40px;
+    position: fixed;
+    top: 0px;
+    z-index: 1;
+    opacity: 90%;
 }
 
 .Barra-de-navegacion img{
-    padding: 5px 0 5px 0;
+    padding: 5px 0 5px 5px;
+    display: inline;
+}
+
+.Barra-de-navegacion h1{
+  position:absolute;
+  top: 10px;
+  right: 47%;
 }
 
 nav{
@@ -130,7 +141,42 @@ nav li {
 
 main{
     width: 95%;
-    margin: 10px 2.5% 10px 2.5%;
+    margin: 50px 2.5% 10px 2.5%;
+}
+
+.Informacion{
+  background: green;
+  width: 23%;
+  height: 600px;
+  float: right;
+  border-radius: 10px;
+}
+
+.Informacion img{
+  position: relative;
+  top: 10%;
+  left: 27%;
+  border-radius: 50%;
+  z-index: 0;
+}
+
+.Informacion h1{
+  position: relative;
+  top: 15%;
+  left: 20%;
+}
+
+.Informacion h2{
+  position: relative;
+  top: 55%;
+  left: 50%;
+}
+
+.Informacion a{
+  position: relative;
+  top: 55%;
+  left: 50%;
+  text-decoration: none;
 }
 
 .Contenido-principal{
@@ -141,13 +187,6 @@ main{
     border-radius: 10px;
 }
 
-.Informacion{
-    background: green;
-    width: 23%;
-    height: 600px;
-    float: right;
-    border-radius: 10px;
-}
 
 footer{
     background: pink;
