--- a/estilos.css
+++ b/estilos.css
@@ -107,14 +107,25 @@ input, select {
 
 /*Estilos*/
 
+html{
+  font-family: 'Noto Sans Mono', monospace;
+  scroll-behavior: smooth;
+  min-width: 387px;
+}
+
+body{
+  background: #1a1a1a;
+}
+
 .Barra-de-navegacion{
-    background: red;
+    background:white;
     width: 100%;
     height: 40px;
     position: fixed;
     top: 0px;
     z-index: 1;
     opacity: 90%;
+    min-width: 387px;
 }
 
 .Barra-de-navegacion img{
@@ -124,8 +135,24 @@ input, select {
 
 .Barra-de-navegacion h1{
   position:absolute;
-  top: 10px;
-  right: 47%;
+  top: 5px;
+  left: 150px;
+  font-size: 28px;
+}
+
+.Barra-de-navegacion a{
+  text-decoration: none;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 3px;
+  background: black;
+  color: white;
+  box-shadow: 5px 0px 6px black;
+  transition: 300ms;
+}
+
+.Barra-de-navegacion a:hover{
+  background: #282828;
 }
 
 nav{
@@ -145,11 +172,11 @@ main{
 }
 
 .Informacion{
-  background: green;
+  background: #76b900;
   width: 23%;
-  height: 800px;
+  height: 965px;
   float: right;
-  border-radius: 10px;
+  min-width: 300px;
 }
 
 .Informacion img{
@@ -158,41 +185,80 @@ main{
   left: 27%;
   border-radius: 50%;
   z-index: 0;
+  box-shadow: 8px 0px 18px black;
 }
 
 .Informacion h1{
   position: relative;
   top: 15%;
-  left: 20%;
+  left: 2%;
+  font-size: 18px;
+  font-weight: bold;
 }
 
-.Informacion h2{
+.Informacion article{
   position: relative;
-  top: 55%;
-  left: 50%;
+  top: 18%;
+  margin: 25px;
+  font-size: 18px;
+  font-weight: bold;
 }
 
-.Informacion a{
+.Informacion h2,#link{
   position: relative;
-  top: 55%;
-  left: 50%;
-  text-decoration: none;
+  top: 25%;
+  left: 9%;
+  width: 135px;
+  color: #000;
 }
+
+.Contenido-principal #LinksPaginas{
+  transition: 300ms;
+}
+
+.Contenido-principal #LinksPaginas:hover{
+  color: #76b900;
+}
+
+
 
 .Contenido-principal{
-    background: white;
+    background:#1a1a1a;
     width: 75%;
-    height: 800px;
+    height: 1500px;
     margin: 0;
     border-radius: 10px;
+    color: white ;
 }
+
+.presentacion, .experiencia{
+  margin: 20px;
+}
+
+.presentacion p{
+  padding: 35px 78px 1px 370px;
+  font-size: 20px;
+  text-align: justify;
+}
+
 .Contenido-principal h1{
-  margin: 10px 10px 10px 10px;
+  padding: 40px 10px 10px 10px;
+  font-size: 20px;
 }
+
 .Contenido-principal article{
   border: 1px solid #000;
   border-radius: 5px;
-  padding: 0px 0px 45px 0px;
+  padding: 0px 0px 55px 0px;
+}
+
+.Contenido-principal p{
+  margin: 0px 0px 0px 10px;
+}
+
+.Contenido-principal a{
+  color: white;
+  margin: 0px 0px 0px 10px;
 }
 
 .Contenido-principal img{
@@ -204,12 +270,17 @@ main{
   border: 1px solid #000;
   border-radius: 5px;
   list-style: none;
+  padding: 10px 0px;
 }
 
 .Contenido-principal table{
   border-collapse: collapse;
   border-spacing: 0;
-  margin-top: 10px;
+  margin: 10px 0px 0px 40px;
+}
+
+.tabla h1{
+  margin: 35px 0px 0px 30px;
 }
 
 .Contenido-principal thead{
@@ -221,22 +292,36 @@ main{
 .Contenido-principal td, th{
   border: 1px solid #000;
   padding: 8px 15px;
+  color: white;
 }
 
 .Contacto label{
   display: block;
-  margin: 0px 0px 10px;
+  color: white;
+  margin: 0px 0px 10px 10px;
 }
+
+.Contacto h1{
+  color: white;
+  padding: 40px 10px 10px 10px;
+}
+
+
+form{
+  margin: 10px 0px 0px 30px;
+}
+
 
 .inputText{
   display: block;
-  margin-bottom: 20px;
+  margin: 10px;
   padding: 10px 25px;
   width: 70%;
 }
 .subir{
   background: #555;
   padding: 10px 25px;
+  margin: 10px;
   font-weight: bold;
   transition: 500ms;
 }
@@ -247,6 +332,101 @@ main{
 }
 
 footer{
-    background: pink;
-    height: 100px;
+    background: white;
+    height: 170px;
+}
+
+.InformaciondeContacto{
+  background: white;
+  font-family:Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
+
+.InformaciondeContacto span{
+  display: block;
+  padding: 10px;
+}
+
+.imagenesfooter{
+
+}
+
+
+/*MOBILE*/
+
+@media screen and (max-width: 1200px) {
+
+  .Barra-de-navegacion{
+    height: 70px;
+  }
+
+  nav{
+    top: 45px;
+    left: 5px;
+  }
+
+  .Informacion{
+    margin-top: 70px;
+    float: none;
+    margin: auto;
+    width: 100%;
+    }
+
+  .Informacion img{
+    left: 75px;
+  }
+
+  .Informacion h1{
+      left: 7%;
+      top: 355px;
+      font-size: 16px;
+      position: absolute;
+  }
+
+
+  .Contenido-principal{
+    height: 2200px;
+    width: 100%;
+  }
+  .Contenido-principal img{
+    float: none;
+    min-width: 99%;
+    min-height: 370px;
+  }
+  .Contenido-principal article{
+    padding: 0px 0px 10px 0px;
+    border: 0px;
+  }
+    
+  .Contenido-principal p{
+    padding: 0px 7px 0px 0px;
+  }
+
+  .Contenido-principal ul{
+    border: 0px;
+  }
+
+  table h1{
+    margin: auto;
+  }
+  form{
+    margin: inherit;
+  }
+
+}
+
+@media screen and (max-width: 420px) {
+
+  nav li{
+    margin: 0px;
+  }
+
+  .Barra-de-navegacion a{
+    font-size: 10px;
+  }
+  
+  .Contenido-principal img{
+    min-height: 250px;
+  }
+
 }
